--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>鶴田のポートフォリオサイト</title>
     <link rel="icon" href="favicon.ico">
     <meta name="description" content="鶴田のポートフォリオサイトです。">
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="/stylesheet.css">
   </head>
   
   <body>
