--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>鶴田のポートフォリオサイト</title>
+    <title>ペン助のポートフォリオサイト</title>
     <link rel="icon" href="favicon.ico">
-    <meta name="description" content="鶴田のポートフォリオサイトです。">
+    <meta name="description" content="ペン助のポートフォリオサイトです。">
     <link rel="stylesheet" href="/stylesheet.css">
   </head>
   
@@ -15,7 +15,7 @@
           <img src="img/taro.png" width="120" height="120" alt="太郎のアイコンです">
         </div>
         <div class="info">
-          <h1>鶴田諒輔</h1>
+          <h1>ペン助</h1>
           <p>UI/UXデザイナー見習いです。</p>
           <ul>
             <li>
