--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
           <p>UI/UXデザイナー見習いです。</p>
           <ul>
             <li>
-              <a href="https://dotinstall.com" target="_blank">
+<!--               <a href="https://dotinstall.com" target="_blank"> -->
                 <img src="img/blog.png" width="20" height="20" alt="ブログサイトへのリンク画像です">
               </a>
             </li>
             <li>
-              <a href="https://dotinstall.com" target="_blank">
+<!--               <a href="https://dotinstall.com" target="_blank"> -->
                 <img src="img/photos.png" width="20" height="20" alt="写真サイトへのリンク画像です">
               </a>
             </li>
