--- a/index.html
+++ b/index.html
@@ -12,19 +12,16 @@
     <header>
       <div class="container">
         <div class="icon">
-          <img src="img/taro.png" width="120" height="120" alt="太郎のアイコンです">
+          <img src="img/taro.png" width="120" height="120" alt="アイコンです">
         </div>
         <div class="info">
           <h1>ペン助</h1>
           <p>UI/UXデザイナー見習いです。</p>
           <ul>
             <li>
-<!--               <a href="https://dotinstall.com" target="_blank"> -->
                 <img src="img/blog.png" width="20" height="20" alt="ブログサイトへのリンク画像です">
-              </a>
             </li>
             <li>
-<!--               <a href="https://dotinstall.com" target="_blank"> -->
                 <img src="img/photos.png" width="20" height="20" alt="写真サイトへのリンク画像です">
               </a>
             </li>
